BUG FIX: When loading the site on mobile, there is blank space on the right. Right scroll to see it.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -660,8 +660,6 @@ ul.users li a {
     }
 
     body > footer {
-        margin-left: -20px;
-        margin-right: -20px;
         text-align: center;
     }
 
